--- a/guliMall-product/src/main/resources/templates/index.html
+++ b/guliMall-product/src/main/resources/templates/index.html
@@ -95,7 +95,8 @@
   					</b>
         <ul>
           <li>
-            <a href="http://auth.guli-mall.com/login.html">你好，请登录</a>
+            <a th:if="${session.loginUser != null}">欢迎 [[${session.loginUser==null?'':session.loginUser.name}]]</a>
+            <a  href="http://auth.guli-mall.com/login.html" th:if="${session.loginUser == null}">你好，请登录</a>
           </li>
           <li>
             <a href="http://auth.guli-mall.com/reg.html" class="li_2">免费注册</a>
