购物车环境搭建

--- a/gulimall-cart/src/main/resources/templates/success.html
+++ b/gulimall-cart/src/main/resources/templates/success.html
@@ -47,7 +47,7 @@
 
         <div class="nav_top">
         <div class="nav_top_one">
-        <a href="http://guli-mall.com"><img src="/static/cart/img/logo1.jpg"  style="height: 60px;wid180px;"  /></a>
+        <a href="http://guli-mall.com"><img src="/static/cart/img/logo1.jpg"  style="height: 60px;width:180px;"  /></a>
         </div>
         <div class="nav_top_two"><input type="text" /><button>搜索</button></div>
 
@@ -71,7 +71,7 @@
         <h3 class="ftx-02">商品已成功加入购物车</h3></div>
     <div class="p-item">
         <div class="p-img">
-        <a href="/static/cart//javascript:;" target="_blank"><img style="height: 60px;wid60px;"   src="/static/cart//img/shop1.jpg"></a>
+        <a href="/static/cart//javascript:;" target="_blank"><img style="height: 60px;width:60px;"   src="/static/cart//img/shop1.jpg"></a>
         </div>
         <div class="p-info">
         <div class="p-name">
@@ -88,8 +88,8 @@
         </div>
         <div class="clr"></div>
         <div class="bg_shop">
-        <a class="btn-tobback" href="'http://item.gmall.com:8084/'+${skuInfo?.id}+'.html'">查看商品详情</a>
-        <a class="btn-addtocart"  href="/static/cart/http://cart.gmall.com:8087/cartList" id="GotoShoppingCart"><b></b>去购物车结算</a>
+        <a class="btn-tobback" href="'http://item.guli-mall.com/'+${skuInfo?.id}+'.html'">查看商品详情</a>
+        <a class="btn-addtocart"  href="http://cart.guli-mall.com/cartList" id="GotoShoppingCart"><b></b>去购物车结算</a>
    </div>
     </div>
     </div>
