--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="/static/login/JD_sass/JD1.css"/>
@@ -32,7 +32,9 @@
         <div class="si_top">
             <p>
                 <span>谷粒商城不会以任何理由要求您转账汇款，谨防诈骗。</span>
+                <span style="color: red" th:if="${session.msg} != null"><br> [[${session.msg}]]</br></span>
             </p>
+
         </div>
         <div class="si_cen">
             <h2 class="act btn1">扫码登录</h2>
