--- a/guliMall-order/src/main/resources/templates/detail.html
+++ b/guliMall-order/src/main/resources/templates/detail.html
@@ -132,7 +132,7 @@
 					</ul>
 					<ul class="header_ul_right">
 						<li style="width: 100px">
-							<a th:if="${session.loginUser != null}">欢迎 [[${session.loginUser==null?'':session.loginUser.name}]]</a>
+							<a th:if="${session.loginUser != null}">欢迎 [[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
 							<a  href="http://auth.guli-mall.com/login.html" th:if="${session.loginUser == null}">你好，请登录</a>
 						</li>
 						<li th:if="${session.loginUser == null}">
