--- a/guliMall-order/src/main/resources/templates/pay.html
+++ b/guliMall-order/src/main/resources/templates/pay.html
@@ -11,7 +11,7 @@
       <div class="Jdbox_head">
         <img src="/static/order/pay/img/logo1.jpg" alt=""><span class="bank">收银台</span>
         <ul>
-          <li><span>[[${session.loginUser==null?'':session.loginUser.name}]]</span> | <span>退出</span></li>
+          <li><span>[[${session.loginUser==null?'':session.loginUser.nickname}]]</span> | <span>退出</span></li>
           <li>我的订单</li>
           <li>支付帮助</li>
         </ul>
