--- a/guliMall-product/src/main/resources/templates/index.html
+++ b/guliMall-product/src/main/resources/templates/index.html
@@ -95,7 +95,7 @@
   					</b>
         <ul>
           <li>
-            <a th:if="${session.loginUser != null}">欢迎 [[${session.loginUser==null?'':session.loginUser.name}]]</a>
+            <a th:if="${session.loginUser != null}">欢迎 [[${session.loginUser==null?'':session.loginUser.nickname}]]</a>
             <a  href="http://auth.guli-mall.com/login.html" th:if="${session.loginUser == null}">你好，请登录</a>
           </li>
           <li>
