--- a/guliMall-product/src/main/resources/templates/item.html
+++ b/guliMall-product/src/main/resources/templates/item.html
@@ -62,7 +62,7 @@
 				<li style="border: 0;">
 					<a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/login.html"
 					   class="aa">你好，请登录</a>
-					<a th:if="${session.loginUser != null}">欢迎, [[${session.loginUser.name}]]</a>
+					<a th:if="${session.loginUser != null}">欢迎, [[${session.loginUser.nickname}]]</a>
 				</li>
 				<li>
 					<a th:if="${session.loginUser == null}" href="http://auth.gulimall.com/reg.html"
