--- a/guliMall-product/src/main/resources/templates/index.html
+++ b/guliMall-product/src/main/resources/templates/index.html
@@ -103,7 +103,7 @@
           </li>
           <span>|</span>
           <li>
-            <a href="http://order.guli-mall.com/list.html">我的订单</a>
+            <a href="http://member.guli-mall.com/member-order.html">我的订单</a>
           </li>
 
 
